# soso

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CHANGELOG.md  Draft_soso.json  LICENSE  README.md  SOSO_Draft.json  environment-min.yml  environment.yml  problematicRecords.txt  pyproject.toml  pytest.ini  requirements.txt  sidebarintro.html  sidebarlogo.html
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
docs/: CHANGELOG.md  requirements.txt  sidebarintro.html  sidebarlogo.html
docs/source/: CHANGELOG.md  conf.py  index.html  index.rst
docs/source/_templates/: sidebarintro.html  sidebarlogo.html
docs/source/_templates/docs/source/: CHANGELOG.md.j2
docs/source/dev/: conduct.rst  contributing.rst  design.rst  maintaining.rst
docs/source/user/: advanced.rst  api.rst  examples.rst  quickstart.rst  support.rst
docs/source/user/examples/: spase-HowToConvert.rst
src/soso/: __init__.py  conversion.py  converter.py  datasets.py  eml.py  interface.py  logging.py  main.py  parser.py  soso.py  sssom.py  transformer.py  utilities.py  validation.py  validator.py  writer.py
src/soso/data/: eml.xml  eml_empty.xml  soso-eml.sssom.tsv  soso-eml.sssom.yml  soso-spase.sssom.tsv  soso-spase.sssom.yml  spase.xml  spase_empty.xml
src/soso/strategies/: eml.py  iso19115.py  spase.py
src/soso/strategies/eml/: eml.py  soso-eml.sssom.yml
src/soso/strategies/spase/: conversion.py  soso-spase.sssom.tsv  soso-spase.sssom.yml  spase-ignoreCreatorSplit.txt  spase.py  spase.xml  spase_empty.xml
src/soso/validation/: cli.py  core.py  logging.py  output.py
tests/: conftest.py  full.jsonld  incomplete.jsonld  problematicRecords.txt  test_conftest.py  test_converter.py  test_eml.py  test_interface.py  test_main.py  test_soso.py  test_spase.py  test_strategies.py  test_utilities.py  test_validation.py  test_validator.py
tests/data/: eml.json  spase.json
tests/data/spase/: spase-David.T.Young.xml  spase.json
