[tool.poetry]
name = "soso"
version = "0.7.1"
description = "For Converting Metadata Records into Science On Schema.Org Markup"
authors = ["Colin Smith <colin.smith@wisc.edu>", "Zach Boquet", "Rebecca Ringuette"]
maintainers = ["Colin Smith <colin.smith@wisc.edu>", "Zach Boquet"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyshacl = "^0.26.0"
requests = "^2.32.0"
lxml = "^5.0.0"
daiquiri = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
sphinx = "^7.0.0"
sphinx-autoapi = "^3.0.0"
myst-parser = "^3.0.0"
pylint = "^3.0.0"
black = "^24.0.0"
python-semantic-release = "^9.0.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"] # version location
branch = "main"                             # branch to make releases of
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-convert GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = false                    # patch release by default

[tool.semantic_release.changelog]
template_dir = "docs/source/_templates/"     # changelog template directory


[tool.pylint.'MESSAGES.CONTROL']
disable = "too-many-public-methods,c-extension-no-member"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
